# pico-fun

./: .editorconfig  .gitignore  README.md  run.sh
blink/: CMakeLists.txt
hello_world/: CMakeCache.txt  Makefile  cmake_install.cmake
projects/blink2/: CMakeLists.txt  blink2.c
projects/gtos/: GCron.c  GCron.h  GCronEntry.c  GCronEntry.h  GDefines.h  GList.c  GList.h  GMap.c  GMap.h  GObj.c  GObj.h  GTimer.c  GTimer.h  Makefile  README.md  Template.c  Template.h  Xyzzy.c  Xyzzy.h  config.h  main.h
projects/gtos/linux/: GTimer.c
projects/gtos/pico/: GTimer.c  config.h
projects/ibookintosh/: CMakeLists.txt  Makefile  Tps65.c  Tps65.h  main  main.c  main.h  main.old.c
projects/ibookintosh/tps65/: tps65.c
rpi-pico-sdk-image/: Dockerfile  bashrc  build.sh  env.sh  install.sh  login.sh  pico_setup.sh
